# Vaillant-CsvViewer

./: .gitignore  README.md
Team1/app/: CMakeLists.txt  main.cpp  testInput.csv
Team1/contracts/: AllowedOperations.h  CMakeLists.txt  ErrorClass.h  Page.h
Team1/domain/source/: CMakeLists.txt  CSVLoader.cpp  CSVLoader.h  CommandLIneArguments.h  CommandLineArguments.cpp  Domain.cpp  Domain.h  FileLoader.cpp  FileLoader.h
Team1/domain/tests/: CMakeLists.txt  CSVLoaderTests.cpp  CommandLineArguments.Tests.cpp  Domain.Tests.cpp  FileLoaderTests.cpp  PageTest.cpp  testInput.csv
Team1/interactor/: CMakeLists.txt
Team1/interactor/source/: CMakeLists.txt  Interactor.cpp  Interactor.h
Team1/interactor/tests/: CMakeLists.txt  Interactor.Tests.cpp
Team1/ui/source/: CMakeLists.txt  Ui.cpp  Ui.h
Team1/ui/tests/: CMakeLists.txt  Ui.Tests.cpp
Team2/: CMakeLists.txt
Team2/app/: CMakeLists.txt  main.cpp
Team2/contracts/: CMakeLists.txt  CSV_File.h  Interface.h  Page.h
Team2/domain/source/: CMakeLists.txt  CSVFileParser.cpp  CSVFileParser.h  CommandlineParser.cpp  CommandlineParser.h  Domain.h  Interactor.cpp  Interactor.h
Team2/domain/tests/: CMakeLists.txt  CSVFileParser.Tests.cpp  CommandlineParser.Tests.cpp  Domain.Tests.cpp  Domain.Tests.cpp.orig
Team2/provider/: CMakeLists.txt
Team2/provider/source/: CMakeLists.txt  CSVFileProvider.cpp  CSVFileProvider.h  PageProvider.cpp  PageProvider.h
Team2/provider/tests/: CMakeLists.txt  CSVFileProvider.Tests.cpp  PageProvider.cpp  Provider.Tests.cpp  testfile.csv
Team2/ui/source/: Ui.cpp  Ui.h
Team3/: CMakeLists.txt
Team3/app/: CMakeLists.txt  main.cpp
Team3/contracts/: CMakeLists.txt  CsvDataStream.h  DataTable.h  DisplayedData.h
Team3/domain/source/: CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  CsvDataFormatter.cpp  CsvDataFormatter.h  CsvDataParser.cpp  CsvDataParser.h  CsvDataProvider.cpp  CsvDataProvider.h  Domain.cpp
Team3/domain/tests/: CMakeLists.txt  CommandLineParser.Tests.cpp  CsvDataFormatter.Tests.cpp  CsvDataParser.Tests.cpp  CsvDataProvider.Tests.cpp
Team3/interactor/: CMakeLists.txt
Team3/interactor/source/: CMakeLists.txt  Interactor.cpp  Interactor.h
Team3/interactor/tests/: CMakeLists.txt  Interactor.Tests.cpp
Team3/ui/source/: CMakeLists.txt  Ui.cpp  Ui.h
Team3/ui/tests/: CMakeLists.txt  Ui.Tests.cpp
